# nanobind_example

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
cext/: a1.cc
src/nanobind_example/: __init__.py
tests/: test_basic.py
